# routers/commentsRouter_controllers.go
@@ -117,6 +117,15 @@ func init() {
 
     beego.GlobalControllerRouter["An_service/controllers:TripController"] = append(beego.GlobalControllerRouter["An_service/controllers:TripController"],
         beego.ControllerComments{
+            Method: "GetTripPolyline",
+            Router: `/wxmp/polyline`,
+            AllowHTTPMethods: []string{"get"},
+            MethodParams: param.Make(),
+            Filters: nil,
+            Params: nil})
+
+    beego.GlobalControllerRouter["An_service/controllers:TripController"] = append(beego.GlobalControllerRouter["An_service/controllers:TripController"],
+        beego.ControllerComments{
             Method: "Stop",
             Router: `/wxmp/stop`,
             AllowHTTPMethods: []string{"get"},
